--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -71,15 +71,13 @@
                 <div>
                 
                     <a href="/kindex/detail/@todaysOrg.ico">
-                        <img src="/socialbanner/kindex?v=@todaysOrg.ico" style="width:80%;max-width:500px;min-width:150px;height:auto" />
+                        <img src="/socialbanner/kindex?v=@todaysOrg.ico" style="width:100%;max-width:500px;min-width:150px;height:auto" />
                     </a>
-                    <br />
-                    <a href="/kindex/detail/@todaysOrg.ico">Jak jsme @Html.KIndexIcon(@todaysOrg.ico) spočítali podrobně popisujeme zde</a>
                 </div>
             </div>
 
             <div class="block-button-wrapper">
-                <a href="/kindex" class="btn btn-default btn-default-new">Sem nejspíš odkaz na blog, nebo článek o kindexu</a>
+                <a href="/kindex/detail/@todaysOrg.ico" class="btn btn-default btn-default-new">Jak jsme K-Index spočítali</a>
             </div>
         </div>
 
