--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -131,11 +131,20 @@
                 </h2>
             </div>
 
-            <div class="block-col ">
-                <p>
+            <div class="block-col block-part">
+                <div class="block-subtitle">
                     Můžete si také porovnat jednotlivé složky kindexu u organizací mezi sebou.
-                </p>
-                <a href="/kindex/porovnat/47609109,60162694,00007064,66002222,45769851,00164801,00551023,00022985,00025429,00024341,66003008,00020478,00023671,00006947">Ministerstva</a>
+                </div>
+                <div class="block-tags">
+                    <a href="/kindex/porovnat/00006947,70856508,70994234,65993390,00064581" class="tag">Subjekty s největším objemem smluv</a>
+                    <a href="/kindex/porovnat/47114983,65269705,00064165,70994234,00098892" class="tag">Subjekty s největším počtem smluv</a>
+                    <a href="/kindex/porovnat/47114983,42196451,00000205,00000493,00000515" class="tag">Největší státní podniky</a>
+                    <a href="/kindex/porovnat/70889953,70890013,70889988,70890021,70890005" class="tag">Povodí</a>
+                    <a href="/kindex/porovnat/29372259,24272523,00001490,00023817,86652052" class="tag">Státní ústavy</a>
+                    <a href="/kindex/porovnat/65993390,71214011,72080043,67981801" class="tag">Ředitelství</a>
+                    <a href="/kindex/porovnat/60193531,28244532,60193468,26463318" class="tag">Akciové společnosti vlastněné státem</a>
+                    <a href="/kindex/porovnat/68378271,61388971,67985823,67985939,68081707" class="tag">Vybrané stavy AV</a>
+                </div>
             </div>
 
             <div class="block-button-wrapper">
