--- a/Web.Statu/Views/Kindex/Porovnat.Index.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.Index.cshtml
@@ -12,11 +12,6 @@
 
 }
 
-@section scripts
-{
-
-}
-
 @section breadcrumb
 {
     <ol class="breadcrumb">
@@ -49,37 +44,19 @@
         <p>Připravili jsme pro vás několik porovnání</p>
         <div class="row">
             <div class="col-xs-12">
-                @foreach (var g in Devmasters.Enums.EnumTools.Groups(typeof(HlidacStatu.Lib.Data.Firma.Zatrideni.StatniOrganizaceObor)))
-                {
-                    <h3>@g</h3>
-                    <div>
-                        @foreach (var item in Devmasters.Enums.EnumTools.InGroup(typeof(HlidacStatu.Lib.Data.Firma.Zatrideni.StatniOrganizaceObor), g))
-                        {
-                        <a href="/kindex/porovnat/@item.ToString()" class="btn btn-default"><span class="text-gray">Porovnat</span> @(item.ToNiceDisplayName())</a>
-
-                        }
-                    </div>
-
-                }
-
-            </div>
-            <div class="col-xs-12">
-                <div style="border-color: #ddd;border-width: 1px;border-radius: 4px 4px 0 0;-webkit-box-shadow: none;box-shadow: none;">
-                    <form action="/porovnat/special?&title=@Url.Encode("Porovnání měst v krajích")" method="get" class="form-inline">
-                        <select name="specialvalue" class="form-control">
-                            <option value="">(vyberte kraj)</option>
-                            @Html.Raw(HlidacStatu.Lib.StaticData.MestaPodleKraju.Keys.OrderBy(k => k).Select(k => $"<option value='{k}'>{k}</option>").Aggregate((f, s) => f + s))
-                        </select>
-                        <button type="submit" name="specialtype" value="mestavkraji" class="btn btn-default">Porovnat města v kraji</button>
-                    </form>
+                <h3>Porovnání</h3>
+                <div>
+                    <a href="/kindex/porovnat/00006947,70856508,70994234,65993390,00064581" class="btn btn-default"><span class="text-gray">Porovnat</span> subjekty s největším objemem smluv</a>
+                    <a href="/kindex/porovnat/47114983,65269705,00064165,70994234,00098892" class="btn btn-default"><span class="text-gray">Porovnat</span> subjekty s největším počtem smluv</a>
+                    <a href="/kindex/porovnat/47114983,42196451,00000205,00000493,00000515" class="btn btn-default"><span class="text-gray">Porovnat</span> největší státní podniky</a>
+                    <a href="/kindex/porovnat/70889953,70890013,70889988,70890021,70890005" class="btn btn-default"><span class="text-gray">Porovnat</span> povodí</a>
+                    <a href="/kindex/porovnat/29372259,24272523,00001490,00023817,86652052" class="btn btn-default"><span class="text-gray">Porovnat</span> státní ústavy</a>
+                    <a href="/kindex/porovnat/65993390,71214011,72080043,67981801" class="btn btn-default"><span class="text-gray">Porovnat</span> ředitelství</a>
+                    <a href="/kindex/porovnat/60193531,28244532,60193468,26463318" class="btn btn-default"><span class="text-gray">Porovnat</span> akciové společnosti vlastněné státem</a>
+                    <a href="/kindex/porovnat/68378271,61388971,67985823,67985939,68081707" class="btn btn-default"><span class="text-gray">Porovnat</span> vybrané stavy AV</a>
                 </div>
             </div>
+            
         </div>
-
     </div>
 </div>
-
-<script>
-
-
-</script>
