Porovnání bigger update

--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -148,7 +148,7 @@
             </div>
 
             <div class="block-button-wrapper">
-                <a href="/kindex/porovnat" class="btn btn-default btn-default-new">zobrazit vybraná porovnání</a>
+                <a href="/kindex/porovnat" class="btn btn-default btn-default-new">Vytvořit vlastní porovnání</a>
             </div>
         </div>
     </div>
