--- a/Web.Statu/Views/Kindex/Zebricek_child.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek_child.cshtml
@@ -101,7 +101,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h4 class="">
-                Skupiny podle kterých lze filtrovat:
+                Skupiny, podle kterých lze filtrovat:
             </h4>
             <div>
                 @if (string.IsNullOrEmpty(selectedGroup))
