--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -144,6 +144,10 @@
                     <a href="/kindex/porovnat/65993390,71214011,72080043,67981801" class="tag">Ředitelství</a>
                     <a href="/kindex/porovnat/60193531,28244532,60193468,26463318" class="tag">Akciové společnosti vlastněné státem</a>
                     <a href="/kindex/porovnat/68378271,61388971,67985823,67985939,68081707" class="tag">Vybrané stavy AV</a>
+
+                    <a href="/kindex/porovnat/66362768,00263338,00069922,00023281,00094871" class="tag">Vybrané galerie</a>
+                    <a href="/kindex/porovnat/00023272,00023299,00100595,00094862,00100609" class="tag">Vybraná muzea</a>
+
                 </div>
             </div>
 
