--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<HlidacStatu.Lib.Analysis.KorupcniRiziko.SubjectWithKIndexAnnualData>
 
-@using Devmasters.Core;
+@using Devmasters.Enums;
 @using HlidacStatu.Lib.Analysis.KorupcniRiziko;
 @using HlidacStatu.Web.Framework;
 @using System.Linq;
