--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -10,7 +10,6 @@
 
     int selectedYear = ViewBag.SelectedYear;
 
-
     ViewBag.Title = "K–Index porovnání";
     //ViewBag.SubTitle = "pro " + firma.Jmeno;
     ViewBag.HideTitle = true;
@@ -106,28 +105,21 @@
             <tbody>
                 <tr id="nazev">
                     <td style="width:290px">firma</td>
-                    @{ 
-                        int uniqueSalt = 0;
-                    }
                     
-                    @foreach (var cmp in Model)
+                    @foreach ( (var cmp, int i) in Model.Select((value, i) => (value, i)) )
                     {
-                        uniqueSalt = uniqueSalt + 1;
-                        <th class="porovnaniHead number @(cmp.Ico)_@(uniqueSalt)">
-                            <a href="#" onclick="RemoveCompany('@(cmp.Ico)_@(uniqueSalt)'); return false;" style="color: red; float:right; margin-left: 5px;"><i class="far fa-trash-alt"></i></a> <a href="/kindex/detail/@cmp.Ico">@(Devmasters.Core.TextUtil.ShortenText(@cmp.Jmeno, 55))</a>
+                        <th class="porovnaniHead number @(cmp.Ico)_@(i)">
+                            <a href="#" onclick="RemoveCompany('@(cmp.Ico)_@(i)'); return false;" style="color: red; float:right; margin-left: 5px;"><i class="far fa-trash-alt"></i></a> <a href="/kindex/detail/@cmp.Ico">@(Devmasters.Core.TextUtil.ShortenText(@cmp.Jmeno, 55))</a>
                         </th>
                     }
 
                 </tr>
                 <tr id="kindex">
                     <th>Celková známka</th>
-                    @{
-                        uniqueSalt = 0;
-                    }
-                    @foreach (var cmp in Model)
+                    
+                    @foreach ((var cmp, int i) in Model.Select((value, i) => (value, i)))
                     {
-                        uniqueSalt = uniqueSalt + 1;
-                        <td class="porovnani total number @(cmp.Ico)_@(uniqueSalt)">
+                        <td class="porovnani total number @(cmp.Ico)_@(i)">
                             @Html.KIndexIcon(cmp.AnnualData.KIndexLabel, "width: 30px", true)
                         </td>
                     }
@@ -148,18 +140,15 @@
                             </div>
                         </th>
                         
-                        @{
-                            uniqueSalt = 0;
-                        }
-                        @foreach (var cmp in Model)
+                        @foreach ((var cmp, int i) in Model.Select((value, i) => (value, i)))
                         {
                             var hodnota = cmp.AnnualData?
                                 .KIndexVypocet?.Radky?
                                 .Where(r => r.Velicina == (int)velicina)
                                 .Select(r => r.Hodnota)
                                 .FirstOrDefault();
-                            uniqueSalt = uniqueSalt + 1;
-                            <td class="porovnani number @(cmp.Ico)_@(uniqueSalt)">
+
+                            <td class="porovnani number @(cmp.Ico)_@(i)">
                                 @*@(hodnota?.ToString("F2") ?? "Chybí K–Index")*@
 
                                 @Html.KIndexIcon(KIndexData.KIndexLabelForPart(velicina, hodnota ?? 0),
@@ -219,7 +208,7 @@
         let unique = `${Date.now()}`;
         let req = "/kindex/KindexForIco/" + ico + "?year=" + year;
         $.get(req, function (data) {
-            $("#nazev").append(`<th class="porovnaniHead number ${data.Ico}_${unique}" style="width: 150px"><a href="#" onclick="RemoveCompany('${data.Ico}_${unique}'); return false;" style="color: red; float:left"><i class="far fa-trash-alt"></i></a><a href="/kindex/detail/${data.Ico}">${data.Jmeno}</a></th>`);
+            $("#nazev").append(`<th class="porovnaniHead number ${data.Ico}_${unique}" style="width: 150px"><a href="#" onclick="RemoveCompany('${data.Ico}_${unique}'); return false;" style="color: red; float:right; margin-left: 5px;"><i class="far fa-trash-alt"></i></a><a href="/kindex/detail/${data.Ico}">${data.Jmeno}</a></th>`);
             $(`#kindex`).append(`<td class="porovnani number ${data.Ico}_${unique}">${data.Kindex}</td>`);
             data.Radky.forEach(radek => {
                 $(`#${radek.VelicinaName}`).append(`<td class="porovnani number ${data.Ico}_${unique}">${radek.Label}</td>`);
