--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -101,7 +101,7 @@
 <div class="row">
     <div class="col-sm-12">
 
-        <table class="table table-no-border" id="tabulkaPorovnani" @(Model.Count == 0 ? "style=\"display:none\"" : "") >
+        <table class="table table-no-border" id="tabulkaPorovnani" @(Model.Count == 0 ? "style=display:none;" : "") >
             <tbody>
                 <tr id="nazev">
                     <td style="width:290px">firma</td>
