--- a/Web.Statu/Views/Kindex/Detail_child.cshtml
+++ b/Web.Statu/Views/Kindex/Detail_child.cshtml
@@ -218,7 +218,7 @@ else
         margin: 0px;
         padding: 30px 5px 30px 5px;
         height: 110px;
-        width:100%;
+        width: 100%;
         max-width: 620px;
         border: solid grey 0px;
     }
@@ -226,7 +226,7 @@ else
     .kframe {
         position: relative;
         max-width: 60px;
-        width:12%;
+        width: 12%;
         border-top: solid 6px;
         border-bottom: solid 6px;
         padding-top: 5px;
@@ -661,10 +661,15 @@ else
         <div class="row">
             <div class="col-xs-12 col-sm-6">
                 @UtilChart.SemiCircleDonut(data, "Koncentrace dodavatelů", "Podíl", 240)
+
+                <h3>Jaké jsou obvyklé hodnoty tohoto parametru?</h3>
+                <div class="well well-sm">
+                    <img src="/kindex/PercentileBanner/@Model.Ico?part=@((int)vradek.VelicinaPart)" style="margin-left:-15%;width:115%;max-width:900px;height:auto" />
+                </div>
             </div>
             <div class="col-xs-12 col-sm-6">
 
-                @using (Html.LowBox(250))
+                @using (Html.LowBox(500))
                 {
                     <table class="table table-new table-new--dotted table-hover">
                         <thead>
@@ -695,6 +700,8 @@ else
                     </table>
                 }
             </div>
+
+
         </div>
 
 
@@ -704,11 +711,21 @@ else
 @helper KoncentraceDetailObory(KIndexData.Annual currYear, KIndexData.KIndexParts part, Statistics statistics)
 {
     KIndexData.VypocetDetail.Radek vradek = currYear.KIndexVypocet.Radky.Where(m => m.VelicinaPart == part).First();
-    <h3>Co tento parametr znamená?</h3>
-    @ParametrDescr(vradek.VelicinaPart, false, "well")
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h3>Co tento parametr znamená?</h3>
+            @ParametrDescr(vradek.VelicinaPart, false, "well")
+        </div>
+        <div class="col-xs-12 col-sm-6">
+            <h3>Jaké jsou obvyklé hodnoty tohoto parametru?</h3>
+            <div class="well well-sm">
+                <img src="/kindex/PercentileBanner/@Model.Ico?part=@((int)vradek.VelicinaPart)" style="width:115%;margin-left:-15%;:800px;height:auto" />
+            </div>
+        </div>
 
-    if (currYear.KIndexVypocet.OboroveKoncentrace.Radky.Count() > 0)
-    {
+    </div>
+        if (currYear.KIndexVypocet.OboroveKoncentrace.Radky.Count() > 0)
+        {
         <div class="row">
             <div class="col-xs-12">
                 <form class="form-horizontal">
@@ -731,89 +748,90 @@ else
 
         foreach (var ro in currYear.KIndexVypocet.OboroveKoncentrace.Radky)
         {
-            <div class="boxobor @ro.Obor" style="display:none;">
-                <h4>Obor @(HlidacStatu.Lib.Data.Smlouva.SClassification.Classification.ToClassifType(ro.Obor).ToNiceDisplayName())</h4>
-                @if (ro.PodilSmluvBezCeny > 0)
-                {
-                    <p>
-                        Počet smluv organizace se skrytou cenou v tomto oboru: <b>@HlidacStatu.Util.RenderData.NiceNumber(ro.PodilSmluvBezCeny * ro.PocetSmluvCelkem + 1)</b>, tj. <b>@(HlidacStatu.Util.RenderData.NicePercent(ro.PodilSmluvBezCeny))</b>.
-                    </p>
-                    <hr style="width:50%" />
-                }
-                <div class="row">
-                    <div class="col-xs-12">
-                        @{
-                            KoncentraceDodavateluIndexy koncentrace = currYear.KoncetraceDodavateluObory
-                                .First(o => o.OborName == ro.Obor)
-                                .Koncentrace;
+        <div class="boxobor @ro.Obor" style="display:none;">
+            <h4>Obor @(HlidacStatu.Lib.Data.Smlouva.SClassification.Classification.ToClassifType(ro.Obor).ToNiceDisplayName())</h4>
+            @if (ro.PodilSmluvBezCeny > 0)
+            {
+                <p>
+                    Počet smluv organizace se skrytou cenou v tomto oboru: <b>@HlidacStatu.Util.RenderData.NiceNumber(ro.PodilSmluvBezCeny * ro.PocetSmluvCelkem + 1)</b>, tj. <b>@(HlidacStatu.Util.RenderData.NicePercent(ro.PodilSmluvBezCeny))</b>.
+                </p>
+                <hr style="width:50%" />
+            }
+            <div class="row">
+                <div class="col-xs-12">
+                    @{
+                        KoncentraceDodavateluIndexy koncentrace = currYear.KoncetraceDodavateluObory
+                            .First(o => o.OborName == ro.Obor)
+                            .Koncentrace;
 
-                            List<Tuple<string, decimal>> data = koncentrace.TopDodavatele(3)
-                                            .OrderByDescending(m => m.HodnotaSmluv)
-                                            .Select(m => new Tuple<string, decimal>(HlidacStatu.Lib.Data.Firmy.GetJmeno(m.Ico), m.HodnotaSmluv))
-                                            .Take(12)
-                                            .ToList();
-                            if (koncentrace.HodnotaSmluvProVypocet - data.Sum(m => m.Item2) > 0)
-                            {
-                                data.Add(new Tuple<string, decimal>("ostatní", koncentrace.HodnotaSmluvProVypocet - data.Sum(m => m.Item2)));
-                            }
+                        List<Tuple<string, decimal>> data = koncentrace.TopDodavatele(3)
+                                        .OrderByDescending(m => m.HodnotaSmluv)
+                                        .Select(m => new Tuple<string, decimal>(HlidacStatu.Lib.Data.Firmy.GetJmeno(m.Ico), m.HodnotaSmluv))
+                                        .Take(12)
+                                        .ToList();
+                        if (koncentrace.HodnotaSmluvProVypocet - data.Sum(m => m.Item2) > 0)
+                        {
+                            data.Add(new Tuple<string, decimal>("ostatní", koncentrace.HodnotaSmluvProVypocet - data.Sum(m => m.Item2)));
                         }
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-6">
-                                @UtilChart.SemiCircleDonut(data, "Koncentrace dodavatelů", "Podíl", 240)
-                            </div>
-                            <div class="col-xs-12 col-sm-6">
-
-                                @using (Html.LowBox(250))
-                                {
-                                    <table class="table table-new table-new--dotted table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>Dodavatel</th>
-                                                <th>Počet smluv</th>
-                                                <th>Objem v Kč</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            @foreach (var souh in koncentrace.Dodavatele.OrderByDescending(m => m.HodnotaSmluv).Take(100))
-                                            {
-                                                <tr>
-                                                    <td>@HlidacStatu.Lib.Data.Firmy.GetJmeno(souh.Ico)</td>
-                                                    <td class="number">@HlidacStatu.Util.RenderData.NiceNumber(souh.PocetSmluv)</td>
-                                                    <td class="number text-nowrap">@HlidacStatu.Util.RenderData.NicePrice(souh.HodnotaSmluv)</td>
-                                                </tr>
-
-                                            }
-                                        </tbody>
-
-                                    </table>
-                                }
-                            </div>
+                    }
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            @UtilChart.SemiCircleDonut(data, "Koncentrace dodavatelů", "Podíl", 240)
                         </div>
+                        <div class="col-xs-12 col-sm-6">
 
+                            @using (Html.LowBox(250))
+                            {
+                                <table class="table table-new table-new--dotted table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Dodavatel</th>
+                                            <th>Počet smluv</th>
+                                            <th>Objem v Kč</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var souh in koncentrace.Dodavatele.OrderByDescending(m => m.HodnotaSmluv).Take(100))
+                                        {
+                                            <tr>
+                                                <td>@HlidacStatu.Lib.Data.Firmy.GetJmeno(souh.Ico)</td>
+                                                <td class="number">@HlidacStatu.Util.RenderData.NiceNumber(souh.PocetSmluv)</td>
+                                                <td class="number text-nowrap">@HlidacStatu.Util.RenderData.NicePrice(souh.HodnotaSmluv)</td>
+                                            </tr>
 
+                                        }
+                                    </tbody>
 
+                                </table>
+                            }
+                        </div>
                     </div>
+
+
+
                 </div>
             </div>
+        </div>
         }
 
-    }
-}
+        }
+
+        }
 
 
-@helper ParametrDescr(KIndexData.KIndexParts part, bool autohide = true, string _class = "bs-callout bs-callout-info small", string style = "")
-{
+        @helper ParametrDescr(KIndexData.KIndexParts part, bool autohide = true, string _class = "bs-callout bs-callout-info small", string style = "")
+        {
 
-    string descr = "";
-    descr = KIndexData.PartsDescription(part);
+            string descr = "";
+            descr = KIndexData.PartsDescription(part);
 
-    if (!string.IsNullOrEmpty(descr))
-    {
-        <div class="@WebUtil.IfExists(autohide,"collapse helpKidx")" aria-expanded="true">
-            <div class="@_class" style="@style">
-                @Html.Raw(descr)
-            </div>
-        </div>
-    }
+            if (!string.IsNullOrEmpty(descr))
+            {
+                <div class="@WebUtil.IfExists(autohide,"collapse helpKidx")" aria-expanded="true">
+                    <div class="@_class" style="@style">
+                        @Html.Raw(descr)
+                    </div>
+                </div>
+            }
 
-}
+        }
