--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -111,7 +111,7 @@
 
                 <div class="block-col ">
                     <p class="muted">
-                        <a href="/kindex">Index korupčního rizika</a> - zkráceně K–Index, je ukazatel, který ukazuje míru rizikových faktorů, které jsou spojeny s nehospodárným nakládáním s veřejnými penězi a rizikem korupce.
+                        <a href="/kindex">Index korupčního rizika</a> - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejých peněz.
                     </p>
                     <p>
                         <a href="/kindex">
