Group filtering fix

--- a/Web.Statu/Views/Kindex/Zebricek_child.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek_child.cshtml
@@ -104,23 +104,19 @@
                 Skupiny, podle kterých lze filtrovat:
             </h4>
             <div>
-                @if (string.IsNullOrEmpty(selectedGroup))
+                @if (string.IsNullOrEmpty(selectedGroup) && string.IsNullOrEmpty(selectedKraj))
                 {
                     @*<span style="padding-right:20px;"><i class="far fa-arrow-square-right"></i>Zobrazeno vše</span>*@
                 }
                 else
                 {
-                    <a style="padding-right:20px; white-space:nowrap;" href="@(ViewBag.SelectedLadder)?rok=@selectedYear"><i class="fas fa-arrow-square-right"></i>Zrušit filter, zobrazit vše</a>
+                    <a style="padding-right:20px; white-space:nowrap;" href="@(ViewBag.SelectedLadder)?rok=@selectedYear"><i class="fas fa-arrow-square-right"></i>Zrušit filtr, zobrazit vše</a>
                 }
                 @foreach (var group in filterGroups)
                 {
-                    if (group.Key == selectedGroup)
+                    if (group.Key == selectedGroup || group.Key == selectedKraj)
                     {
                         <span style="padding-right:20px;font-weight:bold; white-space:nowrap;"><i class="fas fa-arrow-square-right"></i>@group.Key (@group.Value)</span>
-                    }
-                    else if (group.Key == selectedKraj)
-                    {
-                        <span style="padding-right:20px;font-weight:bold;  white-space:nowrap;"><i class="fas fa-arrow-square-right"></i>@group.Key (@group.Value)</span>
                     }
                     else
                     {
